Fixed some ManipulationPreconditions not handling not_supported responses (#100)
The following ManipulationPreconditions were found to not properly
handle not_supported responses and have been adjusted accordingly:

- _AlertConditionPresenceManipulation_

- _AlertSystemActivationStateManipulation_

- all Preconditions using _manipulateMetricStatus_

Missing unit tests for thesePrecondition added.

# Checklist

The following aspects have been respected by the author of this pull
request, confirmed by both pull request assignee **and** reviewer:

* Adherence to coding conventions
  * [x] Pull Request Assignee
  * [x] Reviewer
* Adherence to javadoc conventions
  * [x] Pull Request Assignee
  * [x] Reviewer
* Changelog update (necessity checked and entry added or not added
respectively)
  * [x] Pull Request Assignee
  * [x] Reviewer
* README update (necessity checked and entry added or not added
respectively)
  * [x] Pull Request Assignee
  * [x] Reviewer
* config update (necessity checked and entry added or not added
respectively)
  * [x] Pull Request Assignee
  * [x] Reviewer
* SDCcc executable ran against a test device (if necessary)
  * [x] Pull Request Assignee
  * [x] Reviewer