@@ -60,7 +60,6 @@ public class ManipulationPreconditions {
             final ComponentActivation startingActivationState) {
         final var manipulations = injector.getInstance(Manipulations.class);
         final var testClient = injector.getInstance(TestClient.class);
-        final var testRunObserver = injector.getInstance(TestRunObserver.class);
         final var manipulationResults = new HashSet<ResponseTypes.Result>();
         final var metricEntities =
                 testClient.getSdcRemoteDevice().getMdibAccess().findEntitiesByType(AbstractMetricDescriptor.class);
@@ -74,28 +73,39 @@ public class ManipulationPreconditions {
                 final var resultStartingActivationState =
                         manipulations.setComponentActivation(handle, startingActivationState);
                 // change activation state to something other than expected result to ensure the transition
-                if (resultStartingActivationState != ResponseTypes.Result.RESULT_SUCCESS) {
-                    log.debug(
-                            "Manipulating the activation state to {} was {} for metric state with handle {}."
-                                    + " This needs to be successful, to ensure that the metric is set to {} after performing"
-                                    + " the setMetricStatus manipulation.",
+
+                switch (resultStartingActivationState) {
+                    case RESULT_NOT_SUPPORTED -> log.debug(
+                            "Manipulating the activation state to {} was not supported for metric state with handle {}."
+                                    + " Changing the activation state to something other than {} is required to ensure that a transition occurs when the setMetric manipulation is called.",
                             startingActivationState,
-                            resultStartingActivationState,
                             handle,
                             activationState);
-                    testRunObserver.invalidateTestRun(
-                            String.format("Setting the activation state for metric with handle %s failed", handle));
-                    return false;
+                    case RESULT_SUCCESS -> {
+                        final var manipulationResult = manipulations.setMetricStatus(handle, category, activationState);
+                        log.debug(
+                                "Manipulation setMetricStatus was {} for metric state with handle {}",
+                                manipulationResult,
+                                handle);
+                        if (manipulationResult == ResponseTypes.Result.RESULT_FAIL
+                                || manipulationResult == ResponseTypes.Result.RESULT_NOT_IMPLEMENTED) {
+                            log.error("Setting the metric status for metric with handle {} failed", handle);
+                            return false;
+                        }
+                        manipulationResults.add(manipulationResult);
+                    }
+                    default -> {
+                        log.error(
+                                "Manipulating the activation state to {} was {} for metric state with handle {}."
+                                        + " This needs to be successful, to ensure that the metric is set to {} after performing"
+                                        + " the setMetricStatus manipulation.",
+                                startingActivationState,
+                                resultStartingActivationState,
+                                handle,
+                                activationState);
+                        return false;
+                    }
                 }
-                final var manipulationResult = manipulations.setMetricStatus(handle, category, activationState);
-                log.debug("Manipulation was {} for metric state with handle {}", manipulationResult, handle);
-                if (manipulationResult == ResponseTypes.Result.RESULT_FAIL
-                        || manipulationResult == ResponseTypes.Result.RESULT_NOT_IMPLEMENTED) {
-                    testRunObserver.invalidateTestRun(
-                            String.format("Setting the metric status for metric with handle %s failed", handle));
-                    return false;
-                }
-                manipulationResults.add(manipulationResult);
             }
         }
         return manipulationResults.contains(ResponseTypes.Result.RESULT_SUCCESS);
@@ -517,11 +527,25 @@ public class ManipulationPreconditions {
                 final AlertActivation activationState) {
             LOG.debug("Setting the activation state {} for handle {}", activationState, handle);
             var manipulationResult = manipulations.setAlertActivation(handle, activationState);
-            if (manipulationResult != ResponseTypes.Result.RESULT_SUCCESS) {
-                LOG.error("Setting the activation state {} for handle {} failed", activationState, handle);
-            } else if (!verifyStatePresentAndAlertSet(device, handle, activationState)) {
-                LOG.error("Validation for alert system {} failed", handle);
-                manipulationResult = ResponseTypes.Result.RESULT_FAIL;
+            switch (manipulationResult) {
+                case RESULT_SUCCESS -> {
+                    LOG.debug("Setting the activation state {} for handle {} was successful", activationState, handle);
+                    if (!verifyStatePresentAndAlertSet(device, handle, activationState)) {
+                        LOG.debug(
+                                "Validation for state with handle {} failed, because the state is"
+                                        + " either not present or the activation state is not {}",
+                                handle,
+                                activationState);
+                        manipulationResult = ResponseTypes.Result.RESULT_FAIL;
+                    }
+                }
+                case RESULT_NOT_SUPPORTED -> LOG.debug(
+                        "Setting the activation state {} for handle {} is not supported", activationState, handle);
+                default -> LOG.error(
+                        "Setting the activation state {} for handle {} failed, manipulation result: {}",
+                        activationState,
+                        handle,
+                        manipulationResult);
             }
             return manipulationResult;
         }
@@ -601,10 +625,16 @@ public class ManipulationPreconditions {
                         testClient.getSdcRemoteDevice(), manipulations, parentHandle, AlertActivation.OFF);
                 final var presenceTrueResult =
                         changePresence(testClient.getSdcRemoteDevice(), manipulations, handle, true);
-                if (alertConditionStateResult == ResponseTypes.Result.RESULT_SUCCESS
-                        && alertSystemStateResult == ResponseTypes.Result.RESULT_SUCCESS
+                // the setAlertActivation manipulations are not mandatory, but then the device must ensure that the
+                // activation states are ON when the presence is true.
+                if ((alertConditionStateResult == ResponseTypes.Result.RESULT_SUCCESS
+                                || alertConditionStateResult == ResponseTypes.Result.RESULT_NOT_SUPPORTED)
+                        && (alertSystemStateResult == ResponseTypes.Result.RESULT_SUCCESS
+                                || alertSystemStateResult == ResponseTypes.Result.RESULT_NOT_SUPPORTED)
                         && presenceTrueResult == ResponseTypes.Result.RESULT_SUCCESS) {
                     manipulationSuccessful = true;
+                    // successful manipulation seen
+                    break;
                 }
             }
             return manipulationSuccessful;
@@ -626,11 +656,25 @@ public class ManipulationPreconditions {
                 final boolean presence) {
             LOG.debug("Setting the presence attribute {} for handle {}", presence, handle);
             var manipulationResult = manipulations.setAlertConditionPresence(handle, presence);
-            if (manipulationResult != ResponseTypes.Result.RESULT_SUCCESS) {
-                LOG.error("Setting the presence attribute {} for handle {} failed", presence, handle);
-            } else if (!verifyStatePresentAndPresenceSet(device, handle, presence)) {
-                LOG.error("Validation for alert condition state {} failed", handle);
-                manipulationResult = ResponseTypes.Result.RESULT_FAIL;
+            switch (manipulationResult) {
+                case RESULT_SUCCESS -> {
+                    LOG.debug("Setting the presence {} for handle {} was successful", presence, handle);
+                    if (!verifyStatePresentAndPresenceSet(device, handle, presence)) {
+                        LOG.debug(
+                                "Validation for alert condition state with handle {} failed, because the state is"
+                                        + " either not present or the presence is not {}",
+                                handle,
+                                presence);
+                        manipulationResult = ResponseTypes.Result.RESULT_FAIL;
+                    }
+                }
+                case RESULT_NOT_SUPPORTED -> LOG.debug(
+                        "Setting the presence {} for handle {} is not supported", presence, handle);
+                default -> LOG.error(
+                        "Setting the presence {} for handle {} failed, manipulation result: {}",
+                        presence,
+                        handle,
+                        manipulationResult);
             }
             return manipulationResult;
         }
@@ -651,11 +695,25 @@ public class ManipulationPreconditions {
                 final AlertActivation activation) {
             LOG.debug("Setting the activation state {} for handle {}", activation, handle);
             var manipulationResult = manipulations.setAlertActivation(handle, activation);
-            if (manipulationResult != ResponseTypes.Result.RESULT_SUCCESS) {
-                LOG.error("Setting the activation state {} for handle {} failed", activation, handle);
-            } else if (!verifyStatePresentAndActivationState(device, handle, activation)) {
-                LOG.error("Validation for state with handle {} failed", handle);
-                manipulationResult = ResponseTypes.Result.RESULT_FAIL;
+            switch (manipulationResult) {
+                case RESULT_SUCCESS -> {
+                    LOG.debug("Setting the activation state {} for handle {} was successful", activation, handle);
+                    if (!verifyStatePresentAndActivationState(device, handle, activation)) {
+                        LOG.debug(
+                                "Validation for state with handle {} failed, because the state is either not present"
+                                        + " or the activation state is not {}",
+                                handle,
+                                activation);
+                        manipulationResult = ResponseTypes.Result.RESULT_FAIL;
+                    }
+                }
+                case RESULT_NOT_SUPPORTED -> LOG.debug(
+                        "Setting the activation state {} for handle {} is not supported", activation, handle);
+                default -> LOG.error(
+                        "Setting the activation state {} for handle {} failed, manipulation result: {}",
+                        activation,
+                        handle,
+                        manipulationResult);
             }
             return manipulationResult;
         }
@@ -682,7 +740,7 @@ public class ManipulationPreconditions {
                     alertConditionState);
 
             final var valid = ImpliedValueUtil.isPresence(alertConditionState);
-            LOG.info("Validity for {} after presence attribute is set check: {}", stateHandle, valid);
+            LOG.info("The presence for {} should be {} and is {}", stateHandle, presence, valid);
             return valid == presence;
         }
 
@@ -707,9 +765,9 @@ public class ManipulationPreconditions {
                     "verifyStatePresentAndActivationState: The alert state for the given handle found. {}",
                     abstractAlertState);
 
-            final boolean valid = activation.equals(abstractAlertState.getActivationState());
-            LOG.info("Validity for {} after activation state is set check: {}", stateHandle, valid);
-            return valid;
+            final var actualActivation = abstractAlertState.getActivationState();
+            LOG.info("The activation state for {} should be {} and is {}", stateHandle, activation, actualActivation);
+            return activation.equals(actualActivation);
         }
     }
 
@@ -944,7 +1002,7 @@ public class ManipulationPreconditions {
             final var valid = alertSystemState.getSystemSignalActivation().stream()
                     .filter(systemSignalActivation ->
                             systemSignalActivation.getManifestation().equals(manifestation))
-                    .collect(Collectors.toList())
+                    .toList()
                     .stream()
                     .anyMatch(systemSignalActivation ->
                             systemSignalActivation.getState().equals(activation));
